Proof reason improve (#32)
* Proof reason has ranges as sources, not only lines
* Fix tests