@@ -47,8 +47,8 @@ public abstract class FI<T extends LogicOperation, Q extends ProofStep<T>, P ext
 
     @Override
     public void applyStepSupplier(P pf, ProofStepSupplier<T, Q> supp) {
-        int assLevel = pf.getSteps().get(pf.getSteps().size() - 1).getAssumptionLevel();
-        pf.getSteps().add(supp.generateProofStep(assLevel, (T)constantFunction.get(), new ProofReason("FI", List.of(pos, neg))));
+        int assLevel = pf.getSteps().getLast().getAssumptionLevel();
+        pf.getSteps().add(supp.generateProofStep(assLevel, (T)constantFunction.get(), new ProofReason("FI", List.of(), List.of(pos, neg))));
     }
 
     @Override
