@@ -61,10 +61,9 @@ public abstract class OrE<T extends LogicOperation, Q extends ProofStep<T>, P ex
         if (this == o) {
             return true;
         }
-        if (!(o instanceof OrE)) {
+        if (!(o instanceof OrE<?, ?, ?> orE)) {
             return false;
         }
-        OrE<?, ?, ?> orE = (OrE<?, ?, ?>) o;
         return disj == orE.disj &&
                 rule1 == orE.rule1 &&
                 rule2 == orE.rule2;
@@ -78,7 +77,7 @@ public abstract class OrE<T extends LogicOperation, Q extends ProofStep<T>, P ex
     @Override
     public void applyStepSupplier(P pf, ProofStepSupplier<T, Q> supp) {
         T sol = ((BinaryOperation<T>) pf.getSteps().get(rule1 - 1).getStep()).getRight();
-        int assLevel = pf.getSteps().get(pf.getSteps().size() - 1).getAssumptionLevel();
-        pf.getSteps().add(supp.generateProofStep(assLevel, sol, new ProofReason("|E", List.of(disj, rule1, rule2))));
+        int assLevel = pf.getSteps().getLast().getAssumptionLevel();
+        pf.getSteps().add(supp.generateProofStep(assLevel, sol, new ProofReason("|E", List.of(), List.of(disj, rule1, rule2))));
     }
 }
